<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:visibility="visible"
        android:id="@+id/header_layout"
        layout="@layout/layout_header" />

    <FrameLayout
        android:layout_below="@+id/header_layout"
        android:id="@+id/fl_page"
        android:layout_above="@+id/rg_bottom_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RadioGroup
        android:background="@color/red"
        android:id="@+id/rg_bottom_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:layout_gravity="center_vertical"
            android:id="@+id/rb_home_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/home_page"
            android:textSize="16sp" />

        <RadioButton
            android:layout_gravity="center_vertical"
            android:id="@+id/rb_study_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/study_page"
            android:textSize="16sp" />

        <RadioButton
            android:layout_gravity="center_vertical"
            android:id="@+id/rb_tools_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/tools_page"
            android:textSize="16sp" />

        <RadioButton
            android:layout_gravity="center_vertical"
            android:id="@+id/rb_recreation_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/recreation_page"
            android:textSize="16sp" />

        <RadioButton
            android:layout_gravity="center_vertical"
            android:id="@+id/rb_me_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/me_page"
            android:textSize="16sp" />
    </RadioGroup>
</RelativeLayout>